--- a/css/home.css
+++ b/css/home.css
@@ -516,6 +516,50 @@ p.brandingLogo img {
 	opacity: 50%;
 }
 
-input.button{
+input.button {
 	background-color: rgb(153, 158, 122)
+}
+
+div#cookiesButton {
+	background: rgb(153, 158, 122);;
+	position: fixed;
+	bottom: 10px;
+	right: 10px;
+	/*width: 60px;*/
+	/*height: 20px;*/
+	border: 2px solid rgb(85, 76, 66);
+	box-shadow: black;
+	border-radius: 10px;
+	font-size: 12px;
+	padding: 2px;
+}
+
+div#cookiesTooltip {
+	background: white;
+	position: fixed;
+	bottom: 40px;
+	right: 10px;
+	max-width: 220px;
+	border: 2px solid rgb(85, 76, 66);
+	box-shadow: black;
+	border-radius: 10px;
+	font-size: 12px;
+	padding: 4px;
+	opacity: 0;
+	/*transition: opacity 1s;*/
+}
+
+div#cookiesTooltip.visible {
+	opacity: 1;
+	transition: opacity 1s;
+}
+
+span#closeTooltip {
+	display: inline-flex;
+	margin-left: auto;
+	margin-right: 0;
+	float: right;
+	text-decoration: underline;
+	color: olive;
+	cursor: pointer;
 }
